# device_board_revoview

./: .gitattributes  :wq  OAT.xml  README.OpenSource  README.md  README_EN.md
patches/: apply_patches.py  apply_patches.sh  apply_pr.py  patches.json
patches/graphic/graphic_2d/: 0001-graphic_2d_fix_firstFrameBuff.patch  0002-graphic_2d_fix_arm64_compile.patch  0003-fix-display_inputmethod.patch
wukong100/: BUILD.gn  README_EN.md  README_zh.md  bundle.json  config.gni  device.gni  ohos.build  wukong_binary.md
wukong100/audio_alsa/: common.h  vendor_capture.c  vendor_render.c
wukong100/camera/vdi_impl/v4l2/: BUILD.gn
wukong100/camera/vdi_impl/v4l2/demo/include/: project_camera_demo.h
wukong100/camera/vdi_impl/v4l2/device_manager/: BUILD.gn
wukong100/camera/vdi_impl/v4l2/device_manager/include/: bf2257cs.h  gc02m2.h  gc05a2.h  gc8034.h  ov50c40.h  project_hardware.h
wukong100/camera/vdi_impl/v4l2/device_manager/src/: bf2257cs.cpp  gc02m2.cpp  gc05a2.cpp  gc8034.cpp  ov50c40.cpp
wukong100/camera/vdi_impl/v4l2/driver_adapter/include/: v4l2_buffer.h  v4l2_client.h  v4l2_common.h  v4l2_control.h  v4l2_dev.h  v4l2_fileformat.h  v4l2_temp.h  v4l2_utils.h  v4l2_uvc.h
wukong100/camera/vdi_impl/v4l2/driver_adapter/main_test/: project_v4l2_main.h
wukong100/camera/vdi_impl/v4l2/driver_adapter/src/: v4l2_buffer.cpp  v4l2_control.cpp  v4l2_dev.cpp  v4l2_fileformat.cpp  v4l2_stream.cpp  v4l2_uvc.cpp
wukong100/camera/vdi_impl/v4l2/driver_adapter/test/: BUILD.gn
wukong100/camera/vdi_impl/v4l2/driver_adapter/test/unittest/src/: utest_v4l2_dev.cpp
wukong100/camera/vdi_impl/v4l2/pipeline_core/: BUILD.gn
wukong100/camera/vdi_impl/v4l2/pipeline_core/src/ipp_algo_example/: ipp_algo_example.c
wukong100/camera/vdi_impl/v4l2/pipeline_core/src/node/: avch264encclient.h  codec_node.cpp  codec_node.h  exif_node.cpp  exif_node.h  face_node.cpp  face_node.h  jpeg_api.h
wukong100/cfg/: BUILD.gn  fstab.uis7885  init.uis7885.cfg  init.uis7885.gnss.cfg  init.uis7885.usb.cfg  insmod_modules.sh
wukong100/distributedhardware/: BUILD.gn
wukong100/kernel/: BUILD.gn  build_kernel.sh  make-build.sh  make_boot.sh  make_ohos.sh  wukong100_defconfig
wukong100/kernel/wukong100_patch/: hdf.patch
wukong100/pac/: create_sign_img_all.sh  uis7885_pac.sh
wukong100/pac/secureboot_key/config/: rsa2048_private.pem  rsa2048_private_boot.pem  rsa2048_private_modem.pem  rsa2048_private_product.pem  rsa2048_private_system.pem  rsa2048_private_vendor.pem  rsa2048_private_vendor_boot.pem  rsa2048_public.pem  rsa2048_public_boot.pem  rsa2048_public_modem.pem  rsa2048_public_product.pem  rsa2048_public_system.pem  rsa2048_public_vendor.pem  rsa2048_public_vendor_boot.pem
wukong100/tools/: Download_R27.22.3801.7z  Download_R27.24.2301.7z
