# Copyright (C) 2023 HiHope Open Source Organization.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("device.gni")
kernel_path = "//kernel_unisoc_p7885"

_script = "//build/ohos/file_exists.py"
_args = [
  "--filename",
  rebase_path(kernel_path, root_build_dir),
  "--type",
  "dir",
]
_result = exec_script(_script, _args, "string")

print("wukong100group in")
group("wukong100_group") {
  deps = [
    "cfg:init_configs",
    "distributedhardware:distributedhardware",
    #"lk:lk",
    #"updater:updater_files",
    "//device/board/revoview/wukong100/camera/vdi_impl/v4l2:camera_board_vdi_impl",
    "//third_party/alsa-lib:libasound",
    "//third_party/alsa-utils:alsa-utils",
  ]
  if (_result == "True") {
    deps += [
      "kernel:kernel",
      "//vendor/revoview/wukong100/modules:modules",
    ]
  }
}

# build a pac package
action("make_custom_image") {
  script = "pac/uis7885_pac.sh"
  package_path = "${root_out_dir}/packages/phone/images"
  target_path = "always.build"
  if (_result == "True") {
    script_path = "//unisoc_p7885_property/pac/ImageFiles"
  }
  else {
    script_path = "//device/soc/unisoc/p7885/pac/ImageFiles"
  }
  if (defined(global_parts_info.startup_hvb)) {
    args = [
      rebase_path(package_path),
      rebase_path(script_path),
      "secboot"
    ]
  }
  else {
    args = [
      rebase_path(package_path),
      rebase_path(script_path)
    ]
  }
  outputs = [ "${package_path}/${target_path}" ]

  # must build after make_images
  deps = [
    "//build/ohos/images:make_images",
    # also must wait make boot image
    #"kernel:make_boot_updater_image"
  ]
  if (_result == "True") {
    deps += [ "kernel:make_boot_image" ]
  }
}
