# Copyright (C) 2023 HiHope Open Source Organization.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("init.uis7885.cfg") {
  source = "init.uis7885.cfg"
  part_name = "device_wukong100"
  subsystem_name = "device_wukong100"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("init.uis7885.usb.cfg") {
  source = "init.uis7885.usb.cfg"
  part_name = "device_wukong100"
  subsystem_name = "device_wukong100"
  install_images = [
    chipset_base_dir,
    "updater",
  ]
  install_enable = true
}

ohos_prebuilt_etc("fstab.uis7885") {
  source = "fstab.uis7885"
  part_name = "device_wukong100"
  subsystem_name = "device_wukong100"
  install_images = [ vendor_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("init.uis7885.gnss.cfg") {
  source = "init.uis7885.gnss.cfg"
  part_name = "device_wukong100"
  subsystem_name = "device_wukong100"
  install_images = [ vendor_base_dir ]
  install_enable = true
}

ohos_prebuilt_executable("insmod_modules.sh") {
  source = "insmod_modules.sh"
  part_name = "device_wukong100"
  subsystem_name = "device_wukong100"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

group("init_configs") {
  deps = [
    ":fstab.uis7885",
    ":init.uis7885.cfg",
    ":init.uis7885.usb.cfg",
    ":init.uis7885.gnss.cfg",
    ":insmod_modules.sh"
  ]
}
